[project]
name = "myarxivdb-mcp"
version = "0.1.0"
description = "A MCP server project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "dotenv>=0.9.9",
 "feedparser>=6.0.11",
 "ipykernel>=6.29.5",
 "mcp[cli]>=1.9.1",
 "pandas>=2.3.0",
 "pinecone>=7.0.1",
 "psycopg2>=2.9.10",
 "requests>=2.32.3",
 "scikit-learn>=1.7.0",
 "wget>=3.2",
]
[[project.authors]]
name = "JONGBIN-MACBOOK"
email = "wonjb001@naver.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
myarxivdb-mcp = "myarxivdb_mcp:main"
